handle variable font widths and fonts (but not variable sized fonts)

--- a/meteor/App.axaml
+++ b/meteor/App.axaml
@@ -8,6 +8,14 @@
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
+
+             <Application.Resources>
+                 <ResourceDictionary>
+                     <ResourceDictionary.MergedDictionaries>
+                         <ResourceInclude Source="/Resources/Resources.axaml" />
+                     </ResourceDictionary.MergedDictionaries>
+                 </ResourceDictionary>
+             </Application.Resources>
   
     <Application.Styles>
         <FluentTheme />
