--- a/meteor/Views/MainWindow.axaml
+++ b/meteor/Views/MainWindow.axaml
@@ -11,7 +11,8 @@
         x:DataType="viewModels:MainWindowViewModel">
 
     <Grid RowDefinitions="*, Auto">
-        <views:ScrollableTextEditor DataContext="{Binding ScrollableTextEditorViewModel }" />
+        <views:ScrollableTextEditor FontFamily="{StaticResource SanFranciscoMonoMedium}"
+                                    DataContext="{Binding ScrollableTextEditorViewModel}" FontSize="13" />
         <views:StatusPane x:Name="StatusPane" DataContext="{Binding StatusPaneViewModel}" Grid.Row="1" />
     </Grid>
 </Window>
