improved gutter (scroll not synched btwn gutter and text editor)

--- a/meteor/Views/Gutter.axaml
+++ b/meteor/Views/Gutter.axaml
@@ -10,4 +10,13 @@
              FontSize="{Binding FontSize}"
              LineHeight="{Binding LineHeight}">
 
+    <Border BorderBrush="Transparent"
+            BorderThickness="0,0,1,0"
+            Background="Transparent"
+            PointerWheelChanged="OnPointerWheelChanged">
+        <Canvas Name="GutterCanvas"
+                Background="Transparent"
+                Width="{Binding $parent[UserControl].Bounds.Width}"
+                Height="{Binding $parent[UserControl].Bounds.Height}" />
+    </Border>
 </UserControl>
