added buttonless scroll viewer

--- a/meteor/App.axaml
+++ b/meteor/App.axaml
@@ -19,5 +19,6 @@
   
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="/Styles/Styles.axaml" />
     </Application.Styles>
 </Application>
