--- a/meteor/Views/ScrollableTextEditor.axaml
+++ b/meteor/Views/ScrollableTextEditor.axaml
@@ -14,12 +14,13 @@
         <converters:LineCountToHeightConverter x:Key="LineCountToHeightConverter" />
         <converters:LongestLineOrWindowWidthConverter x:Key="LongestLineOrWindowWidthConverter" />
     </UserControl.Resources>
-    <ScrollViewer x:Name="EditorScrollViewer"
-                  VerticalScrollBarVisibility="Auto"
-                  HorizontalScrollBarVisibility="Auto"
-                  ScrollChanged="EditorScrollViewer_ScrollChanged"
-                  SizeChanged="EditorScrollViewer_SizeChanged"
-                  Offset="{Binding Offset, Mode=TwoWay}">
+    <views:ButtonlessScrollViewer x:Name="EditorScrollViewer"
+                                  Theme="{StaticResource {x:Type ScrollViewer}}"
+                                  VerticalScrollBarVisibility="Auto"
+                                  HorizontalScrollBarVisibility="Auto"
+                                  ScrollChanged="EditorScrollViewer_ScrollChanged"
+                                  SizeChanged="EditorScrollViewer_SizeChanged"
+                                  Offset="{Binding Offset, Mode=TwoWay}">
         <views:TextEditor x:Name="TextEditor"
                           FontFamily="{Binding FontPropertiesViewModel.FontFamily}"
                           FontSize="{Binding FontPropertiesViewModel.FontSize}">
@@ -37,5 +38,5 @@
                 </MultiBinding>
             </views:TextEditor.Height>
         </views:TextEditor>
-    </ScrollViewer>
+    </views:ButtonlessScrollViewer>
 </UserControl>
