highlight current line, enable gutter line selection

--- a/meteor/Views/Gutter.axaml
+++ b/meteor/Views/Gutter.axaml
@@ -13,6 +13,8 @@
     <Border BorderBrush="Transparent"
             BorderThickness="0,0,1,0"
             Background="Transparent"
-            PointerWheelChanged="OnPointerWheelChanged">
-    </Border>
+            PointerWheelChanged="OnPointerWheelChanged"
+            PointerPressed="OnPointerPressed"
+            PointerMoved="OnPointerMoved"
+            PointerReleased="OnPointerReleased" />
 </UserControl>
