--- a/meteor/Views/MainWindow.axaml
+++ b/meteor/Views/MainWindow.axaml
@@ -6,16 +6,46 @@
         xmlns:viewModels="clr-namespace:meteor.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="meteor.Views.MainWindow"
-        Title="meteor" Height="450" Width="450"
+        Width="500"
+        Height="500"
+        MinWidth="500"
+        MinHeight="500"
         WindowStartupLocation="CenterScreen"
+        Background="LightGray"
+        Title="meteor"
+        FontFamily="{StaticResource SanFrancisco}"
+        FontWeight="Normal"
+        Cursor="Arrow"
         x:DataType="viewModels:MainWindowViewModel">
 
     <Grid RowDefinitions="*, Auto">
-        <Grid ColumnDefinitions="Auto, *">
-            <views:Gutter Grid.Column="0" DataContext="{Binding GutterViewModel}" />
-            <views:ScrollableTextEditor Grid.Column="1"
-                                        DataContext="{Binding ScrollableTextEditorViewModel}" />
-        </Grid>
+        <views:HorizontalScrollableTabControl
+            SelectedItem="{Binding SelectedTab, Mode=TwoWay}"
+            x:Name="HorizontalScrollableTabControl"
+            Background="#dcdcdc" ItemsSource="{Binding Tabs}"
+            TabStripPlacement="Top">
+            <views:HorizontalScrollableTabControl.ItemTemplate>
+                <DataTemplate DataType="{x:Type viewModels:TabViewModel}">
+                    <views:TabView />
+                </DataTemplate>
+            </views:HorizontalScrollableTabControl.ItemTemplate>
+            <views:HorizontalScrollableTabControl.ContentTemplate>
+                <DataTemplate x:DataType="viewModels:TabViewModel">
+                    <Grid ColumnDefinitions="Auto, *">
+                        <views:Gutter Grid.Column="0"
+                                      DataContext="{Binding ScrollableTextEditorViewModel.GutterViewModel}" />
+                        <views:ScrollableTextEditor Grid.Column="1"
+                                                    DataContext="{Binding ScrollableTextEditorViewModel}" />
+                    </Grid>
+                </DataTemplate>
+            </views:HorizontalScrollableTabControl.ContentTemplate>
+        </views:HorizontalScrollableTabControl>
         <views:StatusPane x:Name="StatusPane" DataContext="{Binding StatusPaneViewModel}" Grid.Row="1" />
     </Grid>
+
+    <Window.KeyBindings>
+        <KeyBinding Command="{Binding NewTabCommand}" Gesture="Ctrl+N" />
+        <KeyBinding Command="{Binding CloseTabCommand}" CommandParameter="{Binding SelectedTab}" Gesture="Ctrl+W" />
+        <!-- <KeyBinding Command="{Binding SaveCommand}" Gesture="Ctrl+S" /> -->
+    </Window.KeyBindings>
 </Window>
