--- a/meteor/Resources/LightTheme.axaml
+++ b/meteor/Resources/LightTheme.axaml
@@ -1,6 +1,8 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=System.Runtime">
 
+    <!-- Buttons -->
     <Color x:Key="ButtonBackground">#E0E0E0</Color>
     <Color x:Key="ButtonForeground">#333333</Color>
     <Color x:Key="ButtonBorder">#B0B0B0</Color>
@@ -10,4 +12,37 @@
     <Color x:Key="ButtonBackgroundDisabled">#F0F0F0</Color>
     <Color x:Key="ButtonBorderDisabled">#F0F0F0</Color>
 
+    <!-- Text -->
+    <Color x:Key="Text">#000000</Color>
+
+    <!-- General UI -->
+    <Color x:Key="WindowBackground">#D3D3D3</Color>
+    <Color x:Key="MainBorder">#A6A6A6</Color>
+    <Color x:Key="LightGray">#DCDCDC</Color>
+
+    <!-- TextEditor Colors -->
+    <FontFamily x:Key="TextEditorFontFamily">avares://meteor/Assets/Fonts/SanFrancisco/SF-Mono-Medium.otf#SF Mono</FontFamily>
+    <system:Double x:Key="TextEditorFontSize">13</system:Double>
+    <Color x:Key="TextEditorBackground">#FFFFFF</Color>
+    <Color x:Key="TextEditorCursor">#000000</Color>
+    <Color x:Key="TextEditorSelection">#648BCDCD</Color>
+    <Color x:Key="TextEditorLineHighlight">#EDEDED</Color>
+
+    <!-- Gutter Colors -->
+    <FontFamily x:Key="GutterFontFamily">avares://meteor/Assets/Fonts/SanFrancisco/SF-Mono-Medium.otf#SF Mono</FontFamily>
+    <system:Double x:Key="GutterFontSize">13</system:Double>
+    <Color x:Key="GutterBackground">#FFFFFF</Color>
+    <Color x:Key="GutterHighlight">#EDEDED</Color>
+    <Color x:Key="GutterSelected">#000000</Color>
+    <Color x:Key="GutterDefault">#BBBBBB</Color>
+
+    <!-- Tab Colors -->
+    <Color x:Key="TabCloseButtonBackground">#B4B4B4</Color>
+    <Color x:Key="TabDirtyIndicator">#8BCDC0</Color>
+
+    <!-- File Explorer -->
+    <Color x:Key="FileExplorerIcon">#A5A5A5</Color>
+    <Color x:Key="FileExplorerOutline">#878787</Color>
+    <Color x:Key="FileExplorerSelected">#E6E6E6</Color>
+    
 </ResourceDictionary>
