--- a/meteor/Views/Gutter.axaml
+++ b/meteor/Views/Gutter.axaml
@@ -3,12 +3,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:meteor.ViewModels"
+             xmlns:views="clr-namespace:meteor.Views"
              mc:Ignorable="d" d:DesignWidth="50"
              x:Class="meteor.Views.Gutter"
              x:DataType="viewModels:GutterViewModel"
-             FontFamily="{Binding FontFamily}"
-             FontSize="{Binding FontSize}"
-             LineHeight="{Binding LineHeight}">
+             ForegroundBrush="{Binding ForegroundBrush, RelativeSource={RelativeSource Self}}"
+             FontFamily="{Binding FontFamily, RelativeSource={RelativeSource Self}}"
+             Background="{Binding BackgroundBrush, RelativeSource={RelativeSource AncestorType=views:Gutter}}"
+             FontSize="{Binding FontSize, RelativeSource={RelativeSource Self}}"
+             LineHeight="{Binding LineHeight, RelativeSource={RelativeSource Self}}"
+             LineHighlightBrush="{Binding LineHighlightBrush}"
+             SelectedBrush="{Binding SelectedBrush}">
 
     <Border BorderBrush="Transparent"
             BorderThickness="0,0,1,0"
