--- a/meteor/Views/StatusPane.axaml
+++ b/meteor/Views/StatusPane.axaml
@@ -7,7 +7,9 @@
              xmlns:vm="clr-namespace:meteor.ViewModels"
              x:DataType="vm:StatusPaneViewModel">
 
-    <Border Background="#dcdcdc" BorderBrush="#a6a6a6" BorderThickness="1">
+    <Border Background="{Binding Background, RelativeSource={RelativeSource AncestorType=UserControl}}"
+            BorderBrush="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=UserControl}}"
+            BorderThickness="0 1 0 0">
         <Grid Margin="0" Height="25" ColumnDefinitions="*,Auto">
 
             <!-- Left-aligned StackPanel -->
@@ -20,11 +22,14 @@
                 <Button HorizontalAlignment="Right" VerticalAlignment="Center"
                         Background="Transparent" BorderThickness="0" Margin="5 0" Padding="5,0">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding CursorPosition.Y}" Foreground="Black"
+                        <TextBlock Text="{Binding CursorPosition.Y}"
+                                   Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                    TextAlignment="Right" FontSize="13" FontFamily="{StaticResource SanFrancisco}" />
-                        <TextBlock Text=":" Margin="0,0,0,0" Foreground="Black" FontSize="13"
-                                   FontFamily="{StaticResource SanFrancisco}" />
-                        <TextBlock Text="{Binding CursorPosition.X}" Foreground="Black"
+                        <TextBlock Text=":" Margin="0,0,0,0"
+                                   Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                   FontSize="13" FontFamily="{StaticResource SanFrancisco}" />
+                        <TextBlock Text="{Binding CursorPosition.X}"
+                                   Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                    TextAlignment="Left" FontSize="13" FontFamily="{StaticResource SanFrancisco}" />
                     </StackPanel>
                 </Button>
