--- a/meteor/Views/TabView.axaml
+++ b/meteor/Views/TabView.axaml
@@ -27,38 +27,47 @@
             <Setter Property="Opacity" Value="1" />
         </Style>
         <Style Selector="Button#CloseButton">
-            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="Foreground"
+                    Value="{Binding CloseButtonForeground}" />
             <Setter Property="Background" Value="Transparent" />
         </Style>
         <Style Selector="Button#CloseButton:pointerover /template/ ContentPresenter">
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="Background" Value="#B4B4B4" />
+            <Setter Property="Foreground"
+                    Value="{Binding CloseButtonForeground}" />
+            <Setter Property="Background" Value="{Binding CloseButtonBackground}" />
         </Style>
     </UserControl.Styles>
 
-    <Border x:Name="MainBorder" BorderBrush="#a6a6a6" Background="Transparent" BorderThickness="0 0 1 0"
+    <Border x:Name="MainBorder"
+            BorderBrush="{Binding BorderBrush}"
+            Background="{Binding Background}"
+            BorderThickness="0 0 1 0"
             Padding="14 4 2 4" local:MiddleTabClickBehavior.CloseCommand="{Binding CloseTabCommand}"
             local:MiddleTabClickBehavior.CloseCommandParameter="{Binding}">
         <ToolTip.Placement>
             Pointer
         </ToolTip.Placement>
         <ToolTip.Tip>
-            <TextBlock FontFamily="{StaticResource SanFrancisco}" FontSize="13" Text="{Binding FilePath}" />
+            <TextBlock FontFamily="{StaticResource SanFrancisco}"
+                       FontSize="13"
+                       Text="{Binding FilePath}" />
         </ToolTip.Tip>
         <Grid x:Name="TabGrid" ColumnDefinitions="Auto,*,Auto" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Ellipse Grid.Column="0" Width="8" Height="8"
-                     Fill="{Binding IsDirty, Converter={StaticResource BoolToBrushConverter}, ConverterParameter='Transparent;#8bcdc0'}"
+                     Fill="{Binding DirtyIndicatorBrush}"
                      IsVisible="{Binding IsDirty, Converter={StaticResource BoolToBrushConverter}}"
                      Margin="-4,0,6,0" />
             <TextBlock Grid.Column="1" Text="{Binding Title}" VerticalAlignment="Center"
                        HorizontalAlignment="Center" FontSize="13"
                        FontWeight="Normal" Margin="0 1 0 0"
+                       Foreground="{Binding Foreground}"
                        FontFamily="{Binding IsTemporary, Converter={StaticResource IsTemporaryTabToFontFamilyConverter}}"
                        FontStyle="{Binding IsTemporary, Converter={StaticResource IsTemporaryTabToFontStyleConverter}}" />
             <Button x:Name="CloseButton" Grid.Column="2"
                     Width="18"
                     Height="16"
                     Padding="0"
+                    Foreground="{Binding CloseButtonForeground}"
                     VerticalAlignment="Center" HorizontalAlignment="Center"
                     VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                     Margin="2 1 0 0"
