--- a/meteor/Resources/DarkTheme.axaml
+++ b/meteor/Resources/DarkTheme.axaml
@@ -46,6 +46,20 @@
     <Color x:Key="FileExplorerOutline">#646464</Color>
     <Color x:Key="FileExplorerSelected">#2E2E2E</Color>
 
+    <!-- Command Palette -->
+    <Color x:Key="CommandPaletteBackground">#1E1E1E</Color>
+    <Color x:Key="CommandPaletteBorder">#323232</Color>
+    <Color x:Key="CommandPaletteText">#E0E0E0</Color>
+    <Color x:Key="CommandPaletteWatermarkForeground">#E0E0E0</Color>
+    <Color x:Key="CommandPaletteTextBoxBackground">#2C2C2C</Color>
+    <Color x:Key="CommandPaletteTextBoxForeground">#E0E0E0</Color>
+    <Color x:Key="CommandPaletteTextBoxBorder">#4B4B4B</Color>
+    <Color x:Key="CommandPaletteListBoxBackground">#1E1E1E</Color>
+    <Color x:Key="CommandPaletteListBoxItemHover">#3A3A3A</Color>
+    <Color x:Key="CommandPaletteListBoxItemSelected">#444444</Color>
+    <Color x:Key="CommandPaletteBoxShadowColor">#20000000</Color>
+    <Color x:Key="CommandPaletteTextBoxCaret">#FFFFFF</Color>
+
     <!-- Syntax Highlighting -->
     <Color x:Key="KeywordColor">#569CD6</Color>
     <Color x:Key="CommentColor">#608B4E</Color>
