--- a/meteor/Views/MainWindow.axaml
+++ b/meteor/Views/MainWindow.axaml
@@ -22,6 +22,11 @@
         <Rectangle Grid.Column="0" Name="DialogOverlay" Grid.RowSpan="3"
                    Grid.ColumnSpan="3" ZIndex="9999"
                    Fill="Black" Opacity="0.5" IsVisible="{Binding IsDialogOpen}" />
+        <Rectangle Grid.Column="0" Name="CommandPaletteOverlay" Grid.RowSpan="3"
+                   Grid.ColumnSpan="3" ZIndex="9999"
+                   Fill="Transparent"
+                   IsVisible="{Binding IsCommandPaletteVisible}"
+                   PointerPressed="OnOverlayPointerPressed" />
 
         <!-- Title Bar -->
         <views:TitleBar Grid.Column="0" DataContext="{Binding TitleBarViewModel}" VerticalAlignment="Stretch"
@@ -92,6 +97,14 @@
             </views:HorizontalScrollableTabControl.ContentTemplate>
         </views:HorizontalScrollableTabControl>
 
+        <views:CommandPalette ZIndex="99999" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="3"
+                              IsVisible="{Binding IsVisible}"
+                              DataContext="{Binding CommandPaletteViewModel}"
+                              VerticalAlignment="Top"
+                              HorizontalAlignment="Center"
+                              Margin="0,50,0,0"
+                              Width="400" />
+        
         <!-- Status Pane -->
         <views:StatusPane Grid.Column="0" x:Name="StatusPane"
                           DataContext="{Binding StatusPaneViewModel}"
@@ -105,5 +118,6 @@
         <KeyBinding Command="{Binding NewTabCommand}" Gesture="Ctrl+N" />
         <KeyBinding Command="{Binding CloseTabCommand}" CommandParameter="{Binding SelectedTab}" Gesture="Ctrl+W" />
         <KeyBinding Command="{Binding SaveCommand}" Gesture="Ctrl+S" />
+        <KeyBinding Command="{Binding ToggleCommandPaletteCommand}" Gesture="Ctrl+P" />
     </Window.KeyBindings>
 </Window>
