--- a/meteor/Views/CommandPalette.axaml
+++ b/meteor/Views/CommandPalette.axaml
@@ -50,7 +50,7 @@
                             CommandParameter="{Binding}"
                             Background="Transparent"
                             BorderBrush="Transparent"
-                            Padding="0"
+                            Padding="8 6"
                             HorizontalAlignment="Stretch"
                             HorizontalContentAlignment="Left"
                             Focusable="False">
@@ -82,7 +82,7 @@
                 </ListBox.ItemTemplate>
                 <ListBox.Styles>
                     <Style Selector="ListBoxItem">
-                        <Setter Property="Padding" Value="8,6" />
+                        <Setter Property="Padding" Value="0" />
                         <Setter Property="CornerRadius" Value="4" />
                         <Setter Property="Margin" Value="0,0" />
                     </Style>
